// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with a show 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "height": 120,
        "marginLeft": 20,
        "marginRight": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexBasis": 0,
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        Array [
          Object {
            "maxWidth": 708,
          },
          undefined,
        ],
      ]
    }
  >
    <AROpaqueImageView
      imageURL="https://d32dm0rphc51dk.cloudfront.net/bJ9I_vJX9ksaKFJAkOAIKg/normalized.jpg"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "borderRadius": 2,
            "height": 80,
            "width": 80,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Array [
            Object {
              "alignSelf": "center",
              "marginLeft": 10,
              "maxHeight": 70,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 11,
                "textAlign": "left",
              },
              undefined,
              Object {},
              Object {
                "fontFamily": "AvantGardeGothicITC",
              },
            ]
          }
        >
          ACA GALLERIES
        </Text>
        <View
          style={
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "justifyContent": "flex-end",
                },
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#6e1fff",
                  "borderRadius": 4,
                  "height": 8,
                  "marginBottom": 3,
                  "marginLeft": 4,
                  "marginTop": 3,
                  "width": 8,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 16,
                "textAlign": "left",
              },
              Object {},
              Object {
                "fontFamily": "AGaramondPro-Regular",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontFamily": "AGaramondPro-Regular",
                  "fontSize": 16,
                },
                undefined,
              ]
            }
          >
            Catty Fair
          </Text>
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
              "textAlign": "left",
            },
            Object {},
            Object {
              "fontFamily": "AGaramondPro-Regular",
            },
          ]
        }
      >
        Karl and Anna... Fab!
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#cccccc",
              "fontSize": 11,
              "textAlign": "left",
            },
            Object {},
            Object {
              "fontFamily": "AvantGardeGothicITC",
            },
          ]
        }
      >
        A YEAR AGO
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "#e5e5e5",
          "height": 1,
          "width": 708,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`renders correctly with an artwork 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "height": 120,
        "marginLeft": 20,
        "marginRight": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexBasis": 0,
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        Array [
          Object {
            "maxWidth": 708,
          },
          undefined,
        ],
      ]
    }
  >
    <AROpaqueImageView
      imageURL="https://d32dm0rphc51dk.cloudfront.net/bJ9I_vJX9ksaKFJAkOAIKg/normalized.jpg"
      style={
        Array [
          Object {
            "alignSelf": "center",
            "borderRadius": 2,
            "height": 80,
            "width": 80,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Array [
            Object {
              "alignSelf": "center",
              "marginLeft": 10,
              "maxHeight": 70,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 11,
                "textAlign": "left",
              },
              undefined,
              Object {},
              Object {
                "fontFamily": "AvantGardeGothicITC",
              },
            ]
          }
        >
          ACA GALLERIES
        </Text>
        <View
          style={
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Array [
                Object {
                  "justifyContent": "flex-end",
                },
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#6e1fff",
                  "borderRadius": 4,
                  "height": 8,
                  "marginBottom": 3,
                  "marginLeft": 4,
                  "marginTop": 3,
                  "width": 8,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 16,
                "textAlign": "left",
              },
              Object {},
              Object {
                "fontFamily": "AGaramondPro-Regular",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontFamily": "AGaramondPro-Regular",
                  "fontSize": 16,
                },
                undefined,
              ]
            }
          >
            Bradley Theodore · 
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontFamily": "AGaramondPro-Regular",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontFamily": "AGaramondPro-Italic",
                  },
                  undefined,
                ],
              ]
            }
          >
            Karl and Anna Face Off (Diptych), 
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontFamily": "AGaramondPro-Regular",
                  "fontSize": 16,
                },
                undefined,
              ]
            }
          >
            2016
          </Text>
        </Text>
      </View>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
              "textAlign": "left",
            },
            Object {},
            Object {
              "fontFamily": "AGaramondPro-Regular",
            },
          ]
        }
      >
        Karl and Anna... Fab!
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#cccccc",
              "fontSize": 11,
              "textAlign": "left",
            },
            Object {},
            Object {
              "fontFamily": "AvantGardeGothicITC",
            },
          ]
        }
      >
        A YEAR AGO
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "#e5e5e5",
          "height": 1,
          "width": 708,
        },
        undefined,
      ]
    }
  />
</View>
`;
